# LWA_EPIC

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALL_ASU.md  LICENSE  README.md  conda_env.yml  epical_devel.ipynb  pylib-specs.txt  setup.cfg  setup.py  test.sh  version.json
.githooks/: commit-msg
.github/workflows/: .learn-github-actions.yml.swp  pytest_test.yml  pytest_test.yml.save  release.yml  run_tests.yml  test.yml
.swm/: command-line-options.obfbc4o9.sw.md  correlatorrft-raft-kernel-to-image-gulps-using-epic.ppdii2t8.sw.md  creating-a-lock-free-buffer-manager-for-arbitrary-types.vfoja6wa.sw.md  creating-a-raft-kernel.hr4rzvt1.sw.md  gulpgen_rft-raft-kernel-to-generate-a-gulp.xoj4z82p.sw.md  introduction.scbwnifl.sw.md  lfbufrmngr-lock-free-buffer-pools.boxu201d.sw.md  runepic-bootstrapping-the-pipeline.wyum4y66.sw.md  swimm.json
LWA/: EPIC_multi_gpu.py  EPIC_single_gpu.py  LWA_bifrost.py  LWA_bifrost_DFT.py  LWA_bifrost_alt_ordering.py  MCS2.py  main_bifrost.py
LWA_EPIC/: ConsumerThread.py  LWA_EPIC.py  MCS2.py  SocketThread.py  __init__.py
Tests/: main_bifrost.py  test_bifrost.py  test_dummyTest.py  test_lwa_epic.py
config/: ASU_proclog.cpp  ASU_user.mk  epic.yml  install_conda.sh
scripts/: LWA_EPIC_run.py  batch_npz2fits.py  calc_lightcurve.py
src/: MOFF_cu_handler.cu  bkp.txt  ibverbs_test.cpp  main.cpp  sockets.cpp
src/commands/: nvidia-max-perf.bash  nvidia-reset.bash
src/ex/: MOFF_correlator.hpp  MOFF_cu_handler.h  bf_ibverbs.hpp  buffer.hpp  constants.h  cu_helpers.cuh  data_copier.cuh  db_helpers.hpp  exceptions.hpp  fft_dx.cuh  formats.h  gpu_monitor.cuh  gridder.cuh  helper_traits.hpp  host_helpers.cu  host_helpers.h  lf_buf_mngr.hpp  metrics.hpp  option_parser.hpp  orm_types.hpp  packet_assembler.hpp  packet_processor.hpp  packet_processor_bkp.h  packet_receiver.hpp  py_funcs.hpp  sockets.h  station_desc.hpp  tensor.hpp  types.hpp  video_streaming.hpp
src/python/: ConsumerThread.py  MCS2.py  SocketThread.py  __init__.py  adp.py  daily_digest.py  epic_types.py  epic_utils.py  grid_overlay.py  pixel_extract_utils.py  pixel_extractor.py
src/python/epic_grpc/: __init__.py  epic_image.proto  epic_image_pb2.py  epic_image_pb2.pyi  epic_image_pb2_grpc.py  epic_image_pb2_grpc.pyi
src/raft_kernels/: accumulator.cpp  accumulator.hpp  chan_reducer.cpp  chan_reducer.hpp  correlator.hpp  db_ingester.cpp  db_ingester.hpp  disk_saver.cpp  disk_saver.hpp  dummy_kernel.hpp  dummy_packet_gen.hpp  epic_executor.hpp  epic_live_streamer.hpp  index_fetcher.hpp  kernel_types.hpp  packet_gen.hpp  pixel_extractor.cpp  pixel_extractor.hpp  raft_test.cpp
