[metadata]
name = LWA_EPIC
description = Package to run EPIC on LWA stations
author = EPIC Collaboration
long_description = file: README.md
long_description_content_type = text/markdown
Classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    aipy
    scipy
    numpy
    astropy
    healpy
    ephem
    pytz
    matplotlib
    lsl
    contextlib2
    pint
    ctypesgen @ git+https://github.com/olsonse/ctypesgen.git@9bd2d249aa4011c6383a10890ec6f203d7b7990f


[options.extras_require]
tests = pytest
